tests/error/comptime/check_dereference15.bz
// error: invalid memory access of an object of type 'int32'
// note: while evaluating expression at compile time
// note: lifetime of the stack object has already ended
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		mut s = [: int32]();
		{
			let arr = [1: int32]();
			s = arr;
		}
		s[0];
	});
}
